--- a/package.json
+++ b/package.json
@@ -2,11 +2,22 @@
   "name": "express-ts",
   "version": "1.0.0",
   "description": "Express project with Typescript",
-  "main": "index.js",
   "scripts": {
     "tsc": "tsc",
-    "dev": "ts-node-dev --respawn --transpileOnly ./src/app.ts",
-    "prod": "tsc && node ./dist/app.js"
+    "dev": "ts-node-dev --respawn --transpileOnly ./src/server.ts",
+    "prod": "tsc && node ./dist/server.js",
+    "start": "npm run serve",
+    "build": "npm run build-ts",
+    "serve": "node dist/server.js",
+    "watch-node": "nodemon dist/server.js",
+    "watch": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run watch-node\"",
+    "test": "jest --forceExit --coverage --verbose",
+    "watch-test": "npm run test -- --watchAll",
+    "build-ts": "tsc",
+    "watch-ts": "tsc -w",
+    "debug": "npm run build && npm run watch-debug",
+    "serve-debug": "nodemon --inspect dist/server.js",
+    "watch-debug": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run serve-debug\""
   },
   "repository": {
     "type": "git",
@@ -28,9 +39,48 @@
   },
   "homepage": "https://github.com/prongbang/express-ts#readme",
   "dependencies": {
-    "@types/express": "^4.17.2",
+    "bcrypt-nodejs": "0.0.3",
+    "compression": "^1.7.4",
+    "dotenv": "^8.2.0",
+    "errorhandler": "^1.5.1",
     "express": "^4.17.1",
+    "fbgraph": "^1.4.4",
+    "http-errors": "^1.7.3",
+    "jwt-simple": "^0.5.6",
+    "knex": "^0.20.10",
+    "lodash": "^4.17.15",
+    "lusca": "^1.6.1",
+    "morgan": "^1.9.1",
+    "nodemailer": "^6.4.2",
+    "passport": "^0.4.1",
+    "passport-facebook": "^3.0.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
+    "pg": "^7.18.1",
     "ts-node-dev": "^1.0.0-pre.44",
+    "winston": "^3.2.1"
+  },
+  "devDependencies": {
+    "@types/bcrypt-nodejs": "0.0.31",
+    "@types/body-parser": "^1.19.0",
+    "@types/compression": "^1.7.0",
+    "@types/errorhandler": "^1.5.0",
+    "@types/express": "^4.17.2",
+    "@types/http-errors": "^1.6.3",
+    "@types/jwt-simple": "^0.5.33",
+    "@types/knex": "^0.16.1",
+    "@types/lodash": "^4.14.149",
+    "@types/lusca": "^1.6.1",
+    "@types/morgan": "^1.7.37",
+    "@types/nodemailer": "^6.4.0",
+    "@types/passport": "^1.0.2",
+    "@types/passport-facebook": "^2.1.9",
+    "@types/passport-jwt": "^3.0.3",
+    "@types/passport-local": "^1.0.33",
+    "@types/pg": "^7.14.1",
+    "@types/winston": "^2.4.4",
+    "jest": "^25.1.0",
+    "nodemon": "^2.0.2",
     "typescript": "^3.7.5"
   }
 }
