--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@types/errorhandler": "^1.5.0",
     "@types/express": "^4.17.2",
     "@types/http-errors": "^1.6.3",
+    "@types/jest": "^25.1.3",
     "@types/jwt-simple": "^0.5.33",
     "@types/knex": "^0.16.1",
     "@types/lodash": "^4.14.149",
@@ -78,9 +79,12 @@
     "@types/passport-jwt": "^3.0.3",
     "@types/passport-local": "^1.0.33",
     "@types/pg": "^7.14.1",
+    "@types/supertest": "^2.0.8",
     "@types/winston": "^2.4.4",
     "jest": "^25.1.0",
     "nodemon": "^2.0.2",
+    "supertest": "^4.0.2",
+    "ts-jest": "^25.2.1",
     "typescript": "^3.7.5"
   }
 }
